# gunicorn-k8s-test

./: .gitignore  Dockerfile  README.md  pyproject.toml  run-test.sh
gunicorn_k8s_test/: main.py
manifests/: metrics-server.yaml  python-app.yaml
